--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 /tests/plugin/mit-t
 /tests/portable/asprintf-t
 /tests/portable/mkstemp-t
+/tests/portable/reallocarray-t
 /tests/portable/snprintf-t
 /tests/portable/strndup-t
 /tests/runtests
