--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install libcdb-dev libdb-file-lock-perl libcrypt-pbkdf2-perl libdbd-sqlite3-perl libdbi-perl libgetopt-long-descriptive-perl libipc-run-perl libjson-perl libkrb5-dev libperl6-slurp-perl libreadonly-perl libsqlite3-dev libtest-minimumversion-perl libtest-perl-critic-perl libtest-pod-perl libtest-strict-perl pkg-config sqlite tinycdb
 env: AUTHOR_TESTING=1
-script: ./bootstrap && ./configure && make warnings && perltidy -pro=tests/data/perltidyrc tests/tools/heimdal-strength-t && diff -u tests/tools/heimdal-strength-t.tdy tests/tools/heimdal-strength-t && tests/runtests -v -o perl/critic && make check
+script: ./bootstrap && ./configure && make warnings && perltidy -pro=tests/data/perltidyrc tests/tools/heimdal-strength-t && diff -u tests/tools/heimdal-strength-t tests/tools/heimdal-strength-t.tdy && tests/runtests -v -o perl/critic && make check
 
 branches:
   only:
