Update files included in the distribution

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,16 +8,17 @@
 # See LICENSE for licensing terms.
 
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = .gitignore .travis.yml LICENSE bootstrap cracklib/HISTORY	    \
-	cracklib/LICENCE cracklib/README cracklib/genrules.pl		    \
-	cracklib/mkdict docs/krb5-strength.5.in tests/HOWTO tests/TESTS	    \
+EXTRA_DIST = .gitignore .travis.yml README.md LICENSE bootstrap		    \
+	cracklib/HISTORY cracklib/LICENCE cracklib/README		    \
+	cracklib/genrules.pl cracklib/mkdict docs/krb5-strength.5.in	    \
+	docs/krb5-strength.pod docs/metadata tests/README tests/TESTS	    \
 	tests/data/krb5.conf tests/data/make-krb5-conf tests/data/passwords \
 	tests/data/perl.conf tests/data/perlcriticrc tests/data/perltidyrc  \
 	tests/data/valgrind.supp tests/data/wordlist			    \
 	tests/data/wordlist.cdb tests/data/wordlist.sqlite		    \
-	tests/docs/pod-spelling-t tests/docs/pod-t tests/perl/critic-t	    \
-	tests/perl/minimum-version-t tests/perl/strict-t		    \
-	tests/tap/libtap.sh tests/tap/perl/Test/RRA.pm			    \
+	tests/docs/pod-spelling-t tests/docs/pod-t tests/docs/urls-t	    \
+	tests/perl/critic-t tests/perl/minimum-version-t		    \
+	tests/perl/strict-t tests/tap/libtap.sh tests/tap/perl/Test/RRA.pm  \
 	tests/tap/perl/Test/RRA/Config.pm				    \
 	tests/tap/perl/Test/RRA/Automake.pm tests/tools/heimdal-history-t   \
 	tests/tools/heimdal-strength-t tests/tools/wordlist-cdb-t	    \
