--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9), cracklib-runtime, dh-autoreconf,
  libtest-strict-perl, perl, pkg-config, tinycdb
 Standards-Version: 3.9.5
 Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
-Vcs-Git: git://git.eyrie.org/kerberos/krb5-strength.git -b debian
+Vcs-Git: https://git.eyrie.org/git/kerberos/krb5-strength.git -b debian/master
 Vcs-Browser: http://git.eyrie.org/?p=kerberos/krb5-strength.git
 
 Package: krb5-strength
