Switch to https for all package URLs

--- a/debian/control
+++ b/debian/control
@@ -10,9 +10,9 @@ Build-Depends: debhelper (>= 9), cracklib-runtime, dh-autoreconf,
  libsqlite3-dev, libtest-pod-perl, libtest-minimumversion-perl,
  libtest-strict-perl, perl, pkg-config, tinycdb
 Standards-Version: 3.9.5
-Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
+Homepage: https://www.eyrie.org/~eagle/software/krb5-strength/
 Vcs-Git: https://git.eyrie.org/git/kerberos/krb5-strength.git -b debian/master
-Vcs-Browser: http://git.eyrie.org/?p=kerberos/krb5-strength.git
+Vcs-Browser: https://git.eyrie.org/?p=kerberos/krb5-strength.git
 
 Package: krb5-strength
 Architecture: any
