--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,30 @@ Source: krb5-strength
 Section: net
 Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 9), cracklib-runtime, dh-autoreconf,
- libcdb-dev, libcrack2-dev, libcrypt-pbkdf2-perl, libdb-file-lock-perl,
- libdbd-sqlite3-perl, libdbi-perl, libfile-slurp-perl,
- libgetopt-long-descriptive-perl, libipc-run-perl, libjson-perl,
- libkrb5-dev (>= 1.9), libperl6-slurp-perl, libreadonly-perl,
- libsqlite3-dev, libtest-pod-perl, libtest-minimumversion-perl,
- libtest-strict-perl, perl, pkg-config, tinycdb
+Build-Depends:
+ cracklib-runtime,
+ debhelper (>= 9),
+ dh-autoreconf,
+ libcdb-dev,
+ libcrack2-dev,
+ libcrypt-pbkdf2-perl,
+ libdb-file-lock-perl,
+ libdbd-sqlite3-perl,
+ libdbi-perl,
+ libfile-slurp-perl,
+ libgetopt-long-descriptive-perl,
+ libipc-run-perl,
+ libjson-perl,
+ libkrb5-dev (>= 1.9),
+ libperl6-slurp-perl,
+ libreadonly-perl,
+ libsqlite3-dev,
+ libtest-minimumversion-perl,
+ libtest-pod-perl,
+ libtest-strict-perl,
+ perl,
+ pkg-config,
+ tinycdb,
 Standards-Version: 3.9.5
 Homepage: https://www.eyrie.org/~eagle/software/krb5-strength/
 Vcs-Git: https://git.eyrie.org/git/kerberos/krb5-strength.git -b debian/master
@@ -16,12 +33,27 @@ Vcs-Browser: https://git.eyrie.org/?p=kerberos/krb5-strength.git
 
 Package: krb5-strength
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}, adduser
-Recommends: cracklib-runtime, libcrypt-pbkdf2-perl, libdb-file-lock-perl,
- libdbd-sqlite3-perl, libdbi-perl, libgetopt-long-descriptive-perl,
- libipc-run-perl, libjson-perl, libreadonly-perl, tinycdb
-Enhances: krb5-admin-server, heimdal-kdc
+Pre-Depends:
+ ${misc:Pre-Depends},
+Depends:
+ adduser,
+ ${misc:Depends},
+ ${perl:Depends},
+ ${shlibs:Depends},
+Recommends:
+ cracklib-runtime,
+ libcrypt-pbkdf2-perl,
+ libdb-file-lock-perl,
+ libdbd-sqlite3-perl,
+ libdbi-perl,
+ libgetopt-long-descriptive-perl,
+ libipc-run-perl,
+ libjson-perl,
+ libreadonly-perl,
+ tinycdb,
+Enhances:
+ heimdal-kdc,
+ krb5-admin-server,
 Description: Password strength checking for Kerberos KDCs
  krb5-strength provides a password quality plugin for the MIT Kerberos KDC
  (specifically the kadmind server), an external password quality program
