--- a/debian/rules
+++ b/debian/rules
@@ -3,14 +3,11 @@
 # Add hardening build flags.
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
-PACKAGE := $(shell dh_listpackages)
-
 %:
-	dh $@ --parallel --with autoreconf
+	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure --parallel -- --enable-reduced-depends \
-	    --with-cracklib
+	dh_auto_configure -- --enable-reduced-depends --with-cracklib
 
 override_dh_auto_install:
 	dh_auto_install --parallel
