--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,7 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 	dh $@
 
 override_dh_auto_configure:
+	./bootstrap
 	dh_auto_configure -- --enable-reduced-depends --with-cracklib
 
 override_dh_auto_install:
