--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,8 @@
 # Add hardening build flags.
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
+PACKAGE := $(shell dh_listpackages)
+
 %:
 	dh $@
 
