--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: krb5-strength
 Section: net
-Priority: extra
+Priority: optional
 Maintainer: Russ Allbery <rra@debian.org>
 Build-Depends:
  cracklib-runtime,
@@ -25,7 +25,8 @@ Build-Depends:
  perl,
  pkg-config,
  tinycdb,
-Standards-Version: 3.9.8
+Rules-Requires-Root: no
+Standards-Version: 4.2.1
 Homepage: https://www.eyrie.org/~eagle/software/krb5-strength/
 Vcs-Git: https://git.eyrie.org/git/kerberos/krb5-strength.git -b debian/master
 Vcs-Browser: https://git.eyrie.org/?p=kerberos/krb5-strength.git
