Update to rra-c-util 8.2 and C TAP Harness 4.7
Update to rra-c-util 8.2:

* Implement explicit_bzero with memset if it is not available.
* Reformat all C source using clang-format 10.
* Work around Test::Strict not skipping .git directories.
* Fix warnings with perltidy 20190601 and Perl::Critic 1.134.
* Improve check for obsolete strings.
* Use a more standard all-permissive license.
* Add SPDX-License-Identifier headers to all substantial source files.
* Skip more build system files when running the test suite.
* Fix warnings with Clang 10, GCC 10, and the Clang static analyzer.
* Exclude more valgrind false positives with Kerberos libraries.

Update to C TAP Harness 4.7:

* Fix warnings with GCC 10.
* Reformat all C source using clang-format 10.
* Fixed malloc error checking in bstrndup.
* Add support for valgrind testing via test list options.
* Report test failures as left and right, not wanted and seen.
* Fix is_string comparisons involving NULL pointers and "(null)".
* Add SPDX-License-Identifier headers to all substantial source files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,10 +16,10 @@ EXTRA_DIST = .clang-format .gitignore .travis.yml README.md LICENSE	    \
 	tests/data/perl.conf tests/data/perlcriticrc tests/data/perltidyrc  \
 	tests/data/valgrind.supp tests/data/wordlist			    \
 	tests/data/wordlist.cdb tests/data/wordlist.sqlite		    \
-	tests/docs/pod-spelling-t tests/docs/pod-t tests/docs/urls-t	    \
-	tests/perl/critic-t tests/perl/minimum-version-t		    \
-	tests/perl/strict-t tests/tap/libtap.sh tests/tap/perl/Test/RRA.pm  \
-	tests/tap/perl/Test/RRA/Config.pm				    \
+	tests/docs/pod-spelling-t tests/docs/pod-t tests/perl/critic-t	    \
+	tests/perl/minimum-version-t tests/perl/strict-t		    \
+	tests/style/obsolete-strings-t tests/tap/libtap.sh		    \
+	tests/tap/perl/Test/RRA.pm tests/tap/perl/Test/RRA/Config.pm	    \
 	tests/tap/perl/Test/RRA/Automake.pm tests/tools/heimdal-history-t   \
 	tests/tools/heimdal-strength-t tests/tools/wordlist-cdb-t	    \
 	tests/tools/wordlist-sqlite-t tests/tools/wordlist-t		    \
@@ -202,7 +202,7 @@ check-local: $(check_PROGRAMS) tests/data/dictionary.pwd
 check-valgrind: $(check_PROGRAMS) tests/data/dictionary.pwd
 	rm -rf $(abs_top_builddir)/tmp-valgrind
 	mkdir $(abs_top_builddir)/tmp-valgrind
-	env RRA_MAINTAINER_TESTS= valgrind --leak-check=full		\
+	env valgrind --leak-check=full		\
 	    --show-reachable=yes --trace-children=yes			\
 	    --log-file=$(abs_top_builddir)/tmp-valgrind/log.%p		\
 	    --suppressions=$(abs_top_srcdir)/tests/data/valgrind.supp	\
