--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@
 # Copyright 2007, 2009-2010, 2012-2014
 #     The Board of Trustees of the Leland Stanford Junior University
 #
-# See LICENSE for licensing terms.
+# SPDX-License-Identifier: MIT
 
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = .clang-format .github .gitignore README.md LICENSE bootstrap   \
