Mark build dependencies with <!nocheck>
* Mark build dependencies used only for the test suite with <!nocheck>.
  Thanks, Helmut Grohne.  (Closes: #978723)
* Remove Build-Dependency on libfile-slurp-perl, which was not used.

--- a/debian/control
+++ b/debian/control
@@ -3,28 +3,27 @@ Section: net
 Priority: optional
 Maintainer: Russ Allbery <rra@debian.org>
 Build-Depends:
- cracklib-runtime,
+ cracklib-runtime <!nocheck>,
  debhelper-compat (= 13),
  libcdb-dev,
  libcrack2-dev,
- libcrypt-pbkdf2-perl,
- libdb-file-lock-perl,
- libdbd-sqlite3-perl,
- libdbi-perl,
- libfile-slurp-perl,
- libgetopt-long-descriptive-perl,
- libipc-run-perl,
- libjson-perl,
+ libcrypt-pbkdf2-perl <!nocheck>,
+ libdb-file-lock-perl <!nocheck>,
+ libdbd-sqlite3-perl <!nocheck>,
+ libdbi-perl <!nocheck>,
+ libgetopt-long-descriptive-perl <!nocheck>,
+ libipc-run-perl <!nocheck>,
+ libjson-perl <!nocheck>,
  libkrb5-dev (>= 1.9),
- libperl6-slurp-perl,
- libreadonly-perl,
+ libperl6-slurp-perl <!nocheck>,
+ libreadonly-perl <!nocheck>,
  libsqlite3-dev,
- libtest-minimumversion-perl,
- libtest-pod-perl,
- libtest-strict-perl,
+ libtest-minimumversion-perl <!nocheck>,
+ libtest-pod-perl <!nocheck>,
+ libtest-strict-perl <!nocheck>,
  perl,
  pkg-config,
- tinycdb,
+ tinycdb <!nocheck>,
 Rules-Requires-Root: no
 Standards-Version: 4.5.0
 Homepage: https://www.eyrie.org/~eagle/software/krb5-strength/
