Fix FTBFS with nocheck profile
Thanks, Helmut Grohne.

--- a/debian/control
+++ b/debian/control
@@ -9,21 +9,21 @@ Build-Depends:
  libcrack2-dev,
  libcrypt-pbkdf2-perl <!nocheck>,
  libdb-file-lock-perl <!nocheck>,
- libdbd-sqlite3-perl <!nocheck>,
- libdbi-perl <!nocheck>,
+ libdbd-sqlite3-perl,
+ libdbi-perl,
  libgetopt-long-descriptive-perl <!nocheck>,
  libipc-run-perl <!nocheck>,
- libjson-perl <!nocheck>,
+ libjson-perl,
  libkrb5-dev (>= 1.9),
- libperl6-slurp-perl <!nocheck>,
- libreadonly-perl <!nocheck>,
+ libperl6-slurp-perl,
+ libreadonly-perl,
  libsqlite3-dev,
  libtest-minimumversion-perl <!nocheck>,
  libtest-pod-perl <!nocheck>,
  libtest-strict-perl <!nocheck>,
  perl,
  pkg-config,
- tinycdb <!nocheck>,
+ tinycdb,
 Rules-Requires-Root: no
 Standards-Version: 4.5.1
 Homepage: https://www.eyrie.org/~eagle/software/krb5-strength/
