Run maintainer-clean during debian/rules clean
* Run make maintainer-clean during debian/rules clean, since
  debian/rules build runs ./bootstrap and thus regenerates test files.
  (Closes: #1048564)

--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,9 @@ PACKAGE := $(shell dh_listpackages)
 %:
 	dh $@
 
+override_dh_auto_clean:
+	dh_auto_clean -- maintainer-clean
+
 override_dh_auto_configure:
 	./bootstrap
 	dh_auto_configure -- --enable-reduced-depends --with-cracklib
