--- a/tests/data/perl.conf
+++ b/tests/data/perl.conf
@@ -3,7 +3,11 @@
 # Ignore the script in cracklib for Perl style checking.  This is verbatim
 # from CrackLib and isn't useful to rewrite.
 @CRITIC_IGNORE = qw(cracklib);
+@SPDX_IGNORE = (qr{ \A cracklib/ }xms);
 @STRICT_IGNORE = qw(cracklib);
+
+# Default minimum version requirement for included Perl scripts.
+$MINIMUM_VERSION = '5.010';
 
 # The Heimdal history implementation uses a bunch of modules, but may not be
 # of interest to all users.  Skip strict testing if its prerequisites aren't
@@ -12,9 +16,6 @@
   DB_File::Lock Crypt::PBKDF2 Getopt::Long::Descriptive IPC::Run JSON
   Readonly
 );
-
-# Default minimum version requirement for included Perl scripts.
-$MINIMUM_VERSION = '5.010';
 
 # File must end with this line.
 1;
